Added files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 /.idea
+/cc.interp
+/cc.java
+/cc.tokens
+/ccBaseListener.class
+/ccBaseListener.java
+/ccLexer.class
+/ccLexer.interp
+/ccLexer.java
+/ccLexer.tokens
+/ccListener.class
+/ccListener.java
+/ccParser$AddContext.class
+/ccParser$AnythingContext.class
+/ccParser$EqualsContext.class
+/ccParser$IdentifierContext.class
+/ccParser$MultContext.class
+/ccParser$NotContext.class
+/ccParser$NumberContext.class
+/ccParser$StartContext.class
+/ccParser$WhitespaceContext.class
+/ccParser.class
+/ccParser.java
