--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-/.idea
-/cc.interp
-/cc.java
-/cc.tokens
-/ccBaseListener.java
-/ccLexer.interp
-/ccLexer.java
-/ccLexer.tokens
-/ccListener.java
-/ccParser.class
-/ccParser.java
+.idea
+src/cc.interp
+src/cc.java
+src/cc.tokens
+src/ccBaseListener.java
+src/ccLexer.interp
+src/ccLexer.java
+src/ccLexer.tokens
+src/ccListener.java
+src/ccParser.class
+src/ccParser.java
 *.class
