--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,11 @@ grun = java -cp $(classpath) org.antlr.v4.gui.TestRig
 SRCFILES = main.java
 GENERATED = ccListener.java ccBaseListener.java ccParser.java ccLexer.java
 
+1a = 01a-hello-world.txt
+1b = 01b-hello-world-withdef.hw
+02 = 02-trafiklys-minimal.hw
+03 = 03-trafiklys.hw
+04 = 04-von-Neumann.hw
 all:
 	make grun
 
@@ -21,4 +26,4 @@ ccLexer.class:	ccLexer.java
 	javac -cp $(classpath) $(GENERATED)
 
 grun:	ccLexer.class cc.txt
-	$(grun) cc start -gui -tokens test/04-von-Neumann.hw
+	$(grun) cc start -gui -tokens test/$(1b)
